--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-pie-chart",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A simple pie chart component inspired by a talk by Lea Verou.",
   "directories": {
     "doc": "doc",
@@ -35,7 +35,10 @@
     "ember-try": "0.0.6"
   },
   "keywords": [
-    "ember-addon", "chart", "pie chart", "pie"
+    "ember-addon",
+    "chart",
+    "pie chart",
+    "pie"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.0.0"
